tests/valid/test5_valid.imagelang
{
    int a = 1;
    a = a + 3;
    write((string)a);
}