tests/invalid/test3_invalid.imagelang
{
  for int i = 0; i < 10; i + 1 do {  // последняя часть должна быть assignment
    write("hi");
  }
}